--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <!-- =======================================================
   * Template Name: DevFolio - v4.9.1
   * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
