about section mod

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
 
+<!--    animation on scroll cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 
     <!-- =======================================================
